...
        },
        actions = {
            IconButton(onClick = { navController.navigate(Screen.Favorite.route) }) {
                Icon(
                    imageVector = Icons.Filled.Favorite,
                    tint = Color.White,
                    contentDescription = "favorite_page",
                )
            }
            IconButton(onClick = { navController.navigate(Screen.About.route) }) {
                Icon(
                    imageVector = Icons.Filled.AccountCircle,
                    tint = Color.White,
                    contentDescription = "about_page"
                )
            }
        },
        colors = TopAppBarDefaults.topAppBarColors(containerColor = MaterialTheme.colorScheme.primary)
    )
}
