...
) {
    Box(
        modifier = modifier.padding(8.dp)
    ) {
        LazyColumn(
            contentPadding = PaddingValues(bottom = 80.dp),
            modifier = modifier.testTag("LanguageList")
        ) {
            if (searchResult.isNotEmpty()) {
                items(searchResult, key = { it.item.id }) { data ->
                    LanguageListItem(
                        name = data.item.name,
                        logoUrl = data.item.logoUrl,
...
